--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .back-image{
     background-image: url('images/bg.jpg');
     background-size: cover;
@@ -19,3 +20,92 @@
     background-color: #18181b!important;
 
 }
+.back-image .mytext{
+    background-color: #000000a1;
+    color: white;
+    padding: 3%;
+    border-radius: 3%;
+}
+.category-btn {
+    color: #207ba8;
+    font-size: 2.3rem;
+    transition: color 0.6s;
+  }
+
+  .category-btn:hover {
+    color: #113b50;
+  }
+  .mycontainer{
+    width: 80%;
+    margin: 0 auto;
+    padding: 2%;
+  }
+  .mylist li{
+    padding: 1% 2%;
+  }
+  .mylist li button{
+    color: rgb(14, 38, 170);
+    font-weight: 500;
+  }
+  .textcolor{
+    color: rgb(14, 38, 170);
+  }
+  .modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    animation: fadeIn 0.5s ease;
+  }
+  
+
+  .modal-content {
+    background-color: whitesmoke;
+    margin: 0 auto;
+    margin-top: 2%;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    animation: slideIn 0.5s ease;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateY(-50px);
+    }
+
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
