--- a/style.css
+++ b/style.css
@@ -1,111 +1,125 @@
-
-.back-image{
-    background-image: url('images/bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 60vh;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    padding: 2%;
-}
-
-.navbar-dark{
-    background-color: #18181b!important;
-    border-bottom: 1px solid #8a8888;
-
-}
-.mybgcolor{
-    background-color: #18181b!important;
-
-}
-.back-image .mytext{
-    background-color: #000000a1;
-    color: white;
-    padding: 3%;
-    border-radius: 3%;
-}
-.category-btn {
-    color: #207ba8;
-    font-size: 2.3rem;
-    transition: color 0.6s;
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
   }
-
-  .category-btn:hover {
-    color: #113b50;
+  .nav-item a:hover{
+    color: rgb(236, 64, 64) !important;
+    font-weight: 700;
+    border-radius: 5px;
+    border-bottom: 1px solid rgb(163, 187, 255);
   }
-  .mycontainer{
-    width: 80%;
-    margin: 0 auto;
-    padding: 2%;
-  }
-  .mylist li{
-    padding: 1% 2%;
-  }
-  .mylist li button{
-    color: rgb(14, 38, 170);
-    font-weight: 500;
-  }
-  .textcolor{
-    color: rgb(14, 38, 170);
-  }
-  .modal {
-    display: none;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-    animation: fadeIn 0.5s ease;
+  .navbar-brand:hover{
+    transform: scale(1.05);
   }
   
-
-  .modal-content {
-    background-color: whitesmoke;
-    margin: 0 auto;
-    margin-top: 2%;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    animation: slideIn 0.5s ease;
-  }
-
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-
-    to {
-      opacity: 1;
-    }
-  }
-
-  @keyframes slideIn {
-    from {
-      transform: translateY(-50px);
-    }
-
-    to {
-      transform: translateY(0);
-    }
-  }
-
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+  .back-image{
+      background-image: url('images/bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 60vh;
+      display: flex;
+      justify-content: center;
+      align-items: end;
+      padding: 2%;
   }
   
+  .navbar-dark{
+      background-color: #18181b!important;
+      border-bottom: 1px solid #8a8888;
+  
+  }
+  .mybgcolor{
+      background-color: #18181b!important;
+  
+  }
+  .back-image .mytext{
+      background-color: #000000a1;
+      color: white;
+      padding: 3%;
+      border-radius: 3%;
+  }
+  .category-btn {
+      color: #207ba8;
+      font-size: 2.3rem;
+      transition: color 0.6s;
+    }
+  
+    .category-btn:hover {
+      color: #113b50;
+    }
+    .mycontainer{
+      width: 80%;
+      margin: 0 auto;
+      padding: 2%;
+    }
+    .mylist li{
+      padding: 1% 2%;
+    }
+    .mylist li button{
+      color: rgb(14, 38, 170);
+      font-weight: 500;
+    }
+    .textcolor{
+      color: rgb(14, 38, 170);
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.5);
+      animation: fadeIn 0.5s ease;
+    }
+    
+  
+    .modal-content {
+      background-color: whitesmoke;
+      margin: 0 auto;
+      margin-top: 2%;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      animation: slideIn 0.5s ease;
+    }
+  
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+  
+      to {
+        opacity: 1;
+      }
+    }
+  
+    @keyframes slideIn {
+      from {
+        transform: translateY(-50px);
+      }
+  
+      to {
+        transform: translateY(0);
+      }
+    }
+  
+    .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+  
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    
